# chat-ai-server

./: README.md  main.py  pyproject.toml
config/: ai.py  server.py  stats.py  strings.py
locales/: en.json  locale.py  tr.json
locales/en/: messages.json
locales/tr/: messages.json  train.json
