[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Özay Akcan <mail@ozayakcan.com.tr>"]
description = ""
name = "chat-ai-server"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.1.2"
numpy = "^1.22.2"
python = "^3.8"
gevent = "^21.12.0"
[tool.poetry.dev-dependencies]
